Update index.html with meta description and styles
Added meta description and improved styling for better presentation.

--- a/index.html
+++ b/index.html
@@ -1,117 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D & A Amazing Services | Documentation & Corporate Experts</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-    <meta name="google-site-verification" content="qZrz_lbfXZVwwKnEvdZjsB4sfvybQmzMc7-0P0t0geM" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>D & A Amazing Services | Documentation & Corporate Experts</title>
+  <meta name="description" content="Business registration, CAC services, affidavits, SCUML, TIN processing, DPR processing and post-incorporation services in Nigeria.">
+  <style>
+    body {font-family: 'Segoe UI', Arial, sans-serif; margin:0; background:#f7f9fc; color:#222; line-height: 1.6;}
+    header {background:#0b3c5d; color:white; padding:40px 20px; text-align:center;}
+    section {padding:30px 20px; max-width:900px; margin:auto;}
+    h2 {color:#0b3c5d; border-bottom: 2px solid #0b3c5d; display: inline-block; padding-bottom: 5px;}
+    h3 {margin-top: 25px; color: #333;}
+    .services ul {list-style:none; padding:0;}
+    .services li {background:white; margin:10px 0; padding:20px; border-left:5px solid #0b3c5d; box-shadow: 0 2px 5px rgba(0,0,0,0.05); display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;}
+    .price-tag {font-weight: bold; color: #0b3c5d; margin-right: 15px;}
+    .contact {background:#eaf1f7; padding:40px 20px; text-align:center; border-radius: 10px; margin-bottom: 40px;}
+    .btn {display:inline-block; background:#0b3c5d; color:white; padding:12px 25px; text-decoration:none; border-radius: 5px; font-weight: bold; transition: background 0.3s;}
+    .btn:hover {background: #13588a;}
+    .btn-sm {padding: 8px 15px; font-size: 14px; background: #25D366;} /* WhatsApp Green */
+    footer {background:#0b3c5d; color:white; text-align:center; padding:25px; font-size: 14px;}
+    .bn-number {display: block; margin-top: 5px; color: #aec6cf; font-weight: bold;}
+  </style>
 </head>
-<body class="bg-slate-50 font-sans text-gray-800">
+<body>
 
-    <div class="bg-blue-900 text-white py-2 text-sm">
-        <div class="container mx-auto px-4 flex justify-between items-center">
-            <span><i class="fas fa-location-dot mr-2"></i> Delta State, Nigeria</span>
-            <span><i class="fas fa-phone mr-2"></i> 08034708445</span>
-        </div>
-    </div>
+<header>
+  <h1>D & A Amazing Services</h1>
+  <p>Reliable Business Registration & Corporate Services</p>
+</header>
 
-    <nav class="bg-white shadow-md sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <div class="text-xl md:text-2xl font-black text-blue-900 leading-tight uppercase">
-                D & A AMAZING <span class="text-blue-600">SERVICES</span>
-            </div>
-            <a href="https://wa.me/2348034708445" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-full font-bold flex items-center transition text-sm">
-                <i class="fab fa-whatsapp mr-2"></i> WhatsApp
-            </a>
-        </div>
-    </nav>
+<section class="services">
+  <h2>Our Services</h2>
 
-    <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white py-16 px-4">
-        <div class="container mx-auto text-center">
-            <h1 class="text-3xl md:text-5xl font-extrabold mb-4 uppercase">Business & Legal Documentation</h1>
-            <p class="text-lg text-blue-100 max-w-2xl mx-auto mb-8">Fast, reliable, and professional services for your business growth.</p>
-        </div>
-    </header>
+  <h3>Pre-Incorporation Services</h3>
+  <ul>
+    <li>
+      <span>Business Name Registration</span>
+      <div>
+        <span class="price-tag">₦35,000</span>
+        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20a%20Business%20Name%20for%2035k">Get Started</a>
+      </div>
+    </li>
+    <li>
+      <span>Company Registration (1M Share Capital)</span>
+      <div>
+        <span class="price-tag">₦70,000</span>
+        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20a%20Company%20(LTD)%20for%2070k">Get Started</a>
+      </div>
+    </li>
+    <li>
+      <span>NGO / Church / Association Registration</span>
+      <div>
+        <span class="price-tag">₦150,000</span>
+        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20an%20NGO/Church">Get Started</a>
+      </div>
+    </li>
+  </ul>
 
-    <section class="container mx-auto py-12 px-4">
-        <h2 class="text-2xl font-bold text-center text-blue-900 mb-10 uppercase tracking-wide">Our Registration Packages</h2>
-        
-        <div class="grid md:grid-cols-3 gap-6 mb-16">
-            <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-blue-500 text-center">
-                <h3 class="font-bold text-gray-700 uppercase mb-2">Business Name</h3>
-                <p class="text-3xl font-black text-blue-900 mb-4">₦35,000</p>
-                <p class="text-sm text-gray-500 mb-6 font-medium">Perfect for Sole Proprietorships & Small Businesses</p>
-                <a href="https://wa.me/2348034708445?text=I'm%20interested%20in%20Business%20Name%20Registration" class="block bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition">Get Started</a>
-            </div>
+  <h3>Post-Incorporation & Other Services</h3>
+  <ul>
+    <li>FIRS / TIN Registration & Modification</li>
+    <li>SCUML Certificate Processing</li>
+    <li>Corporate Bank Account Opening</li>
+    <li>Annual Returns Filing</li>
+    <li>Affidavit Preparation</li>
+    <li>DPR / NUPRC Processing (Oil & Gas)</li>
+  </ul>
+</section>
 
-            <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-blue-500 text-center relative overflow-hidden">
-                <div class="bg-yellow-400 text-blue-900 text-[10px] font-bold px-10 py-1 absolute top-4 -right-8 rotate-45 uppercase">Popular</div>
-                <h3 class="font-bold text-gray-700 uppercase mb-2">Company Reg</h3>
-                <p class="text-3xl font-black text-blue-900 mb-4">₦70,000</p>
-                <p class="text-sm text-gray-500 mb-6 font-medium">1 Million Shares - Private Limited Company (LTD)</p>
-                <a href="https://wa.me/2348034708445?text=I'm%20interested%20in%20Company%20Registration" class="block bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition">Get Started</a>
-            </div>
+<section class="contact">
+  <h2>Ready to Start?</h2>
+  <p>Email: <strong>daamazingservices4@gmail.com</strong></p>
+  <p>Phone / WhatsApp: <strong>+234 803 470 8445</strong></p>
+  <br>
+  <a class="btn" style="background-color: #25D366;" href="https://wa.me/2348034708445?text=Hello,%20I%20visited%20your%20website%20and%20need%20help%20with%20corporate%20documentation.">Chat with an Expert on WhatsApp</a>
+</section>
 
-            <div class="bg-white p-6 rounded-xl shadow-md border-t-4 border-blue-500 text-center">
-                <h3 class="font-bold text-gray-700 uppercase mb-2">NGO / Church</h3>
-                <p class="text-3xl font-black text-blue-900 mb-4">₦150,000</p>
-                <p class="text-sm text-gray-500 mb-6 font-medium">Incorporated Trustees & Associations</p>
-                <a href="https://wa.me/2348034708445?text=I'm%20interested%20in%20NGO/Church%20Registration" class="block bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition">Get Started</a>
-            </div>
-        </div>
-
-        <h2 class="text-2xl font-bold text-center text-blue-900 mb-10 uppercase tracking-wide">Other Core Services</h2>
-        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="bg-white p-5 rounded-lg border border-gray-100 shadow-sm">
-                <i class="fas fa-file-invoice text-blue-600 mb-3 text-xl"></i>
-                <h4 class="font-bold mb-2">TIN & SCUML</h4>
-                <p class="text-xs text-gray-600">Tax ID and Anti-Money Laundering certification for corporate banking.</p>
-            </div>
-            <div class="bg-white p-5 rounded-lg border border-gray-100 shadow-sm">
-                <i class="fas fa-id-card-alt text-blue-600 mb-3 text-xl"></i>
-                <h4 class="font-bold mb-2">NIN Services</h4>
-                <p class="text-xs text-gray-600">Validation and modification of biodata (Name, DOB, etc.).</p>
-            </div>
-            <div class="bg-white p-5 rounded-lg border border-gray-100 shadow-sm">
-                <i class="fas fa-gavel text-blue-600 mb-3 text-xl"></i>
-                <h4 class="font-bold mb-2">Affidavits</h4>
-                <p class="text-xs text-gray-600">Legally sworn statements for loss of documents or name changes.</p>
-            </div>
-            <div class="bg-white p-5 rounded-lg border border-gray-100 shadow-sm">
-                <i class="fas fa-gas-pump text-blue-600 mb-3 text-xl"></i>
-                <h4 class="font-bold mb-2">DPR Permits</h4>
-                <p class="text-xs text-gray-600">Official NUPRC licenses for the Oil and Gas supply sector.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="bg-blue-50 py-12 px-4">
-        <div class="container mx-auto max-w-md bg-white p-8 rounded-2xl shadow-xl border-2 border-blue-200">
-            <h3 class="text-xl font-bold text-blue-900 mb-6 text-center uppercase tracking-widest italic">Official Bank Details</h3>
-            <div class="space-y-4">
-                <div class="flex justify-between border-b pb-2">
-                    <span class="text-xs font-bold text-gray-500 uppercase">Account Name</span>
-                    <span class="text-sm font-black text-gray-800">D & A AMAZING SERVICES</span>
-                </div>
-                <div class="flex justify-between border-b pb-2">
-                    <span class="text-xs font-bold text-gray-500 uppercase">Account Number</span>
-                    <span class="text-lg font-black text-blue-600">8258732696</span>
-                </div>
-                <div class="flex justify-between">
-                    <span class="text-xs font-bold text-gray-500 uppercase">Bank</span>
-                    <span class="text-sm font-black text-gray-800">NOMBA MFB</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer class="bg-gray-900 text-white py-10 px-4 text-center">
-        <p class="text-xl font-black mb-2 uppercase">D & A Amazing Services</p>
-        <p class="text-gray-400 text-sm">Delta State, Nigeria | 08034708445</p>
-    </footer>
+<footer>
+  <p>© 2026 D & A Amazing Services</p>
+  <p class="bn-number">BN: 7627951</p>
+  <p>Delta State, Nigeria | 08034708445</p>
+</footer>
 
 </body>
 </html>
