Revise index.html for updated business details and services
Updated the content and structure of the index.html file to reflect new business information and services offered.

--- a/index.html
+++ b/index.html
@@ -1,85 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>D & A Amazing Services | Documentation & Corporate Experts</title>
-  <meta name="description" content="Business registration, CAC services, affidavits, SCUML, TIN processing, DPR processing and post-incorporation services in Nigeria.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>D & A Amazing Services | Business Registration & Documentation in Nigeria</title>
+
+  <meta name="description" content="D & A Amazing Services (BN: 7627951) provides business registration, CAC filings, TIN, SCUML, DPR, NIN validation and corporate documentation support in Nigeria.">
+
+  <meta name="robots" content="index, follow">
+
+  <!-- Local Business Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "D & A Amazing Services",
+    "identifier": "BN 7627951",
+    "url": "https://daamazingservices4-eng.github.io/",
+    "telephone": "+2348034708445",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Delta State",
+      "addressCountry": "NG"
+    }
+  }
+  </script>
+
   <style>
-    body {font-family: 'Segoe UI', Arial, sans-serif; margin:0; background:#f7f9fc; color:#222; line-height: 1.6;}
-    header {background:#0b3c5d; color:white; padding:40px 20px; text-align:center;}
-    section {padding:30px 20px; max-width:900px; margin:auto;}
-    h2 {color:#0b3c5d; border-bottom: 2px solid #0b3c5d; display: inline-block; padding-bottom: 5px;}
-    h3 {margin-top: 25px; color: #333;}
-    .services ul {list-style:none; padding:0;}
-    .services li {background:white; margin:10px 0; padding:20px; border-left:5px solid #0b3c5d; box-shadow: 0 2px 5px rgba(0,0,0,0.05); display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;}
-    .price-tag {font-weight: bold; color: #0b3c5d; margin-right: 15px;}
-    .contact {background:#eaf1f7; padding:40px 20px; text-align:center; border-radius: 10px; margin-bottom: 40px;}
-    .btn {display:inline-block; background:#0b3c5d; color:white; padding:12px 25px; text-decoration:none; border-radius: 5px; font-weight: bold; transition: background 0.3s;}
-    .btn:hover {background: #13588a;}
-    .btn-sm {padding: 8px 15px; font-size: 14px; background: #25D366;} /* WhatsApp Green */
-    footer {background:#0b3c5d; color:white; text-align:center; padding:25px; font-size: 14px;}
-    .bn-number {display: block; margin-top: 5px; color: #aec6cf; font-weight: bold;}
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f9fa;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #0b3c5d;
+      color: #fff;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background: #fff;
+      margin-top: 20px;
+      border-radius: 6px;
+    }
+    h1, h2, h3 {
+      color: #0b3c5d;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #0b3c5d;
+      color: #fff;
+      margin-top: 30px;
+    }
+    .contact {
+      background: #eef2f5;
+      padding: 15px;
+      border-radius: 6px;
+    }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>D & A Amazing Services</h1>
-  <p>Reliable Business Registration & Corporate Services</p>
+  <p>Business Registration & Corporate Documentation Services</p>
 </header>
 
-<section class="services">
-  <h2>Our Services</h2>
+<section>
+  <h2>About Us</h2>
+  <p>
+    D & A Amazing Services (BN: 7627951) provides structured support for business
+    registration, regulatory compliance, and corporate documentation in Nigeria.
+    Our services assist individuals, startups, companies, and non-profit
+    organizations in meeting statutory and regulatory requirements.
+  </p>
+</section>
 
-  <h3>Pre-Incorporation Services</h3>
+<section>
+  <h2>Pre-Incorporation Services</h2>
   <ul>
-    <li>
-      <span>Business Name Registration</span>
-      <div>
-        <span class="price-tag">₦35,000</span>
-        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20a%20Business%20Name%20for%2035k">Get Started</a>
-      </div>
-    </li>
-    <li>
-      <span>Company Registration (1M Share Capital)</span>
-      <div>
-        <span class="price-tag">₦70,000</span>
-        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20a%20Company%20(LTD)%20for%2070k">Get Started</a>
-      </div>
-    </li>
-    <li>
-      <span>NGO / Church / Association Registration</span>
-      <div>
-        <span class="price-tag">₦150,000</span>
-        <a class="btn btn-sm" href="https://wa.me/2348034708445?text=Hello,%20I%20want%20to%20register%20an%20NGO/Church">Get Started</a>
-      </div>
-    </li>
+    <li>Business Name Registration – from ₦35,000</li>
+    <li>Company Registration (Private Limited Company – ₦1,000,000 share capital) – from ₦70,000</li>
+    <li>Incorporated Trustees (NGO / Church / Association) – ₦140,000</li>
   </ul>
+</section>
 
-  <h3>Post-Incorporation & Other Services</h3>
+<section>
+  <h2>Post-Incorporation Services</h2>
   <ul>
-    <li>FIRS / TIN Registration & Modification</li>
-    <li>SCUML Certificate Processing</li>
-    <li>Corporate Bank Account Opening</li>
-    <li>Annual Returns Filing</li>
-    <li>Affidavit Preparation</li>
-    <li>DPR / NUPRC Processing (Oil & Gas)</li>
+    <li>Annual Returns Filing – ₦20,000</li>
+    <li>Change of Directors – ₦25,000</li>
+    <li>Change of Shareholders / Share Transfer – from ₦20,000</li>
+    <li>Change of Registered Address – from ₦10,000</li>
+    <li>Increase in Share Capital – from ₦25,000</li>
+    <li>Company Name Change – from ₦30,000</li>
+    <li>Correction of CAC Records – from ₦15,000</li>
+    <li>Certified True Copies (CTC) – from ₦10,000</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Regulatory & Other Services</h2>
+  <ul>
+    <li>Tax Identification Number (TIN) Registration – from ₦5000</li>
+    <li>SCUML Registration & Compliance – from ₦25,000</li>
+    <li>DPR Registration – from ₦30,000 (depending on category)</li>
+    <li>NIN Validation & Modification – from ₦5,000</li>
+    <li>Affidavit Processing (Court-approved) – from ₦5,000</li>
+    <li>General Corporate Documentation Support</li>
   </ul>
 </section>
 
 <section class="contact">
-  <h2>Ready to Start?</h2>
-  <p>Email: <strong>daamazingservices4@gmail.com</strong></p>
-  <p>Phone / WhatsApp: <strong>+234 803 470 8445</strong></p>
-  <br>
-  <a class="btn" style="background-color: #25D366;" href="https://wa.me/2348034708445?text=Hello,%20I%20visited%20your%20website%20and%20need%20help%20with%20corporate%20documentation.">Chat with an Expert on WhatsApp</a>
+  <h2>Contact Information</h2>
+  <p><strong>Phone / WhatsApp:</strong> 08034708445</p>
+  <p><strong>Email:</strong> daamazingservices@gmail.com</p>
+  <p><strong>Location:</strong> Delta State, Nigeria</p>
 </section>
 
 <footer>
-  <p>© 2026 D & A Amazing Services</p>
-  <p class="bn-number">BN: 7627951</p>
-  <p>Delta State, Nigeria | 08034708445</p>
+  <p>&copy; 2026 D & A Amazing Services (BN: 7627951). All rights reserved.</p>
 </footer>
 
 </body>
